created the header and top bar

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,3 +1,11 @@
+:root {
+    --color-pink: #FCD8DB;
+    --color-yellow:#ffde7c;
+    --color-blue: #08B6A9;
+}
+
+
+
 *,
 *::after,
 *::before {
@@ -25,6 +33,6 @@ html {
 }
 
 body {
-    
+
 }
 
