--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,4 +1,27 @@
 body {
     font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
 }
 
+.heading-primary {
+    font-family: 'Amatic SC', cursive;
+    font-weight: 700;
+    font-size: 10vw;
+    color: #fff;
+}
+
+.heading-secondary {
+    font-size: 3vw;
+    color: #fff;
+    font-weight: 400;
+}
+
+.heading-main {
+    font-size: 6vw;
+    font-family: 'Amatic SC', cursive;
+    font-weight: 700;
+
+    &--blue {
+        color: var(--color-blue);
+    }
+}
