--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Open+Sans:wght@300;400;700&display=swap');
 
-@import "base/typography"
+@import "abstracts/mixins";
+
+@import "base/base";
+@import "base/typography";
+
+@import "layout/header.scss";
+@import "layout/top-bar.scss";
+
+
+@import "pages/home";
+
