Finished about section

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,6 +1,6 @@
 :root {
-    --color-pink: #FCD8DB;
-    --color-yellow:#ffde7c;
+    --color-pink: #fcd9dc;
+    --color-brown:#595719;
     --color-blue: #08B6A9;
 }
 
