--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Open+Sans:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 /*
 0 - 600px: Phone
 600 - 900px: Tablet potrait
@@ -14,8 +15,8 @@ $breakpoint arguement choices:
 - big-desktop
 */
 :root {
-  --color-pink: #FCD8DB;
-  --color-yellow:#ffde7c;
+  --color-pink: #fcd9dc;
+  --color-brown:#595719;
   --color-blue: #08B6A9; }
 
 *,
@@ -39,7 +40,7 @@ html {
       font-size: 75%; } }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Josefin Slab', serif;
   font-weight: 400; }
 
 .heading-primary {
@@ -51,7 +52,7 @@ body {
 .heading-secondary {
   font-size: 3vw;
   color: #fff;
-  font-weight: 400; }
+  font-weight: 700; }
 
 .heading-main {
   font-size: 6vw;
@@ -61,12 +62,30 @@ body {
     color: var(--color-blue); }
   .heading-main--white {
     color: #fff; }
+  .heading-main--brown {
+    color: var(--color-brown); }
+
+.heading-main-secondary {
+  font-size: 3vw;
+  font-family: 'Josefin Slab', serif;
+  font-weight: 600; }
+  .heading-main-secondary--blue {
+    color: var(--color-blue); }
+  .heading-main-secondary--white {
+    color: #fff; }
+  .heading-main-secondary--brown {
+    color: var(--color-brown); }
 
 .paragraph {
   font-size: 2vw;
-  text-align: center; }
+  text-align: center;
+  font-weight: 300;
+  line-height: 5vh; }
   .paragraph--white {
     color: white; }
+
+.margin-bottom-small {
+  margin-bottom: 2rem; }
 
 .header {
   display: flex;
@@ -111,13 +130,14 @@ body {
 .section-welcome {
   background-color: #fff;
   width: 100%;
-  height: 20vh;
+  height: 25vh;
   display: flex;
   justify-content: center;
   align-items: center; }
 
 .section-about {
-  display: flex; }
+  display: flex;
+  height: 75vh; }
   .section-about__text-box {
     display: flex;
     flex-direction: column;
@@ -128,6 +148,13 @@ body {
     background-color: var(--color-blue); }
   .section-about__image {
     width: 50%;
-    height: 100vh;
     background-image: url("../../img/sandwich-about.jpg");
     background-position: center; }
+
+.section-menu {
+  text-align: center;
+  display: flex;
+  flex-direction: column; }
+  .section-menu__container {
+    display: flex;
+    justify-content: space-around; }
