--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Open+Sans:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
 @import "abstracts/mixins";
 
 @import "base/base";
 @import "base/typography";
+@import "base/utilities";
 
 @import "layout/header.scss";
 @import "layout/top-bar.scss";
 
 
 @import "pages/home";
+
 
