--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -39,7 +39,8 @@
     }
     
     &__starters {
-       
+       display: flex;
+       flex-direction: column;
     }
 
     &__mains {
@@ -47,7 +48,7 @@
     }
 
     &__list {
-
+        list-style: none;
     }
 
     &__item {
