--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -90,7 +90,7 @@
     display: flex;
     
 
-    &__google-map {
+    &__gmap {
         width: 50%;
         height: 100%;
     }
@@ -100,5 +100,14 @@
         height: 100%;
         background-color: var(--color-pink);
         text-align: center;
+    }
+
+    &__link,
+    &:link,
+    &:visited {
+        color: var(--color-blue);
+        font-size: 1.8vw;
+        text-decoration: none;
+        font-weight: 300;
     }
 }
