--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -6,14 +6,22 @@
     margin-bottom: 3.2rem;
 }
 
+.margin-bottom-med {
+    margin-bottom: 5rem;
+}
 
 
+
+.margin-top-x-small {
+    margin-top: 1rem;
+}
 
 
 .margin-top-small {
     margin-top: 2rem;
 }
 
-.margin-top-x-small {
-    margin-top: 1rem;
+.margin-top-lg {
+    margin-top: 10rem;
 }
+
