--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,8 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/button";
+
 @import "layout/header.scss";
 @import "layout/top-bar.scss";
 
