--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -102,12 +102,20 @@
         text-align: center;
     }
 
+    &__hours {
+        font-weight: 500;
+        display: flex;
+        flex-direction: column;
+    }
+
     &__link,
-    &:link,
-    &:visited {
-        color: var(--color-blue);
-        font-size: 1.8vw;
-        text-decoration: none;
-        font-weight: 300;
+        &:link,
+        &:visited {
+            display: flex;
+            flex-direction: column;
+            color: var(--color-blue);
+            font-size: 1.8vw;
+            text-decoration: none;
+            font-weight: 400;
     }
 }
