added parallax transition scroll

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "components/button";
 
 @import "layout/header.scss";
+@import "layout/parallax-transition.scss";
 @import "layout/top-bar.scss";
 
 
