--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,15 @@ body {
     align-items: center;
     margin-top: 20rem; }
 
+.parallax-transition {
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: flex; }
+  .parallax-transition--donuts {
+    background-image: url("../../img/donuts.jpg"); }
+
 .top-bar {
   display: flex;
   justify-content: space-between;
