--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,9 +9,10 @@
 
 @import "components/button";
 
-@import "layout/header.scss";
-@import "layout/parallax-transition.scss";
-@import "layout/top-bar.scss";
+@import "layout/header";
+@import "layout/navigation";
+@import "layout/parallax-transition";
+@import "layout/top-bar";
 
 
 @import "pages/home";
