--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,33 +1,41 @@
 .navigation {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 100vw;
+    background-color: var(--color-pink);
+
 
     &__checkbox {
-        // display: none;
+        display: flex;
+        align-self: flex-end;
+        display: none;
     }
 
     &__button {
         display: flex;
-        position: absolute;
+        align-self: flex-end;
+        position: fixed;
         top: 1.2rem;
-        background-color: orange;
+        margin-right: 2rem;
         height: 3rem;
         width: 3rem;
         text-align: center;
         cursor: pointer;
+        z-index: 3000;
     }
 
   
     &__nav {
-        height: 50vh;
+        height: 0vh;
         width: 100vw;
         position: fixed;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        // visibility: hidden;
-        // opacity: 0;
         background-color: var(--color-pink);
-        transition: all 2s ease-in;
+        transition: all 1s ease-out;
     }
 
     &__item {
@@ -36,10 +44,15 @@
 
     &__list {
         display: flex;
+        height: 0vh;
+        position: absolute;
         flex-direction: column;
         justify-content: center;
         list-style-type: none;
         text-align: center;
+        visibility: hidden;
+        opacity: 0;
+        transition: all 1s ease-out;
     }
 
     &__link {
@@ -59,7 +72,58 @@
     }
 
     &__checkbox:checked ~ &__nav {
-        height: 100%;
-    
+        height: 100vh;
     }
+
+    &__checkbox:checked ~ &__nav &__list {
+        visibility: visible;
+        opacity: 1;
+    }
+
+
+    &__icon {
+        position: relative;
+        margin-top: 1.2rem;
+        &,
+        &::before,
+        &::after {
+            width: 3rem;
+            height: .2rem;
+            background-color: var(--color-blue);
+            display: flex;
+            z-index: 3000;
+            transition: all .2s;
+        }
+
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+        }
+
+        &::before { top: -.8rem; }
+        &::after { top: .8rem; }
+    }
+
+        &__button:hover &__icon::after {
+            top: 1rem;
+        }
+
+        &__button:hover &__icon::before {
+            top: -1rem;
+        }
+
+        &__checkbox:checked ~ &__button &__icon {
+            background-color: transparent;
+        }
+
+        &__checkbox:checked ~ &__button &__icon::before {
+            top: 0;
+            transform: rotate(135deg);
+        }
+
+        &__checkbox:checked ~ &__button &__icon::after {
+            top: 0;
+            transform: rotate(-135deg);
+        }
 }
