--- a/sass/layout/_top-bar.scss
+++ b/sass/layout/_top-bar.scss
@@ -5,7 +5,7 @@
     background-color: var(--color-pink);
     width: 100%;
     height: 5rem;
-    // z-index: 1000;
+    z-index: 2000;
 
     
     &__info-box {
@@ -23,8 +23,8 @@
         display: flex;
         padding: 0 2rem;
         justify-content: space-between;
-        width: 12%;
-        margin-right: 3rem;
+        width: 8%;
+        margin-right: 6rem;
     }
 
     &__icon {
