--- a/sass/layout/_parallax-transition.scss
+++ b/sass/layout/_parallax-transition.scss
@@ -8,4 +8,8 @@
     &--donuts {
         background-image: url("../../img/donuts.jpg");
     }
+
+    &--fried {
+        background-image: url("../../img/fried.jpg");
+    }
 }
