--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -52,7 +52,7 @@
         text-align: center;
         visibility: hidden;
         opacity: 0;
-        transition: all 1s ease-out;
+        transition: all .8s ease-out;
     }
 
     &__link {
