--- a/sass/layout/_parallax-transition.scss
+++ b/sass/layout/_parallax-transition.scss
@@ -12,4 +12,8 @@
     &--fried {
         background-image: url("../../img/fried.jpg");
     }
+
+    &--catering-burger {
+        background-image: url("../../img/catering-burger.jpg");
+    }
 }
