--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -50,6 +50,7 @@
        width: 40vw;
     }
 
+
     &__list {
         list-style: none;
     }
@@ -68,6 +69,10 @@
         font-size: 2.2rem;
         font-weight: 400;
         color: var(--color-brown);
+
+        &--dessert {
+            font-size: 1.5rem;
+        }
     }
 
     &__price {
@@ -77,10 +82,17 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
+
     }
 
     &__choice-box {
         display: flex;
+        justify-content: space-around;
+    }
+
+    &__dessert-container {
+        display: flex;
+        flex-direction: row;
         justify-content: space-around;
     }
 }
