--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     height: 100vh;
-    background-image: url('../../img/tgiv-header-pic-1.jpg');
+    background-image: url('./../img/tgiv-header-pic-1.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     
