--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -23,7 +23,7 @@
 
     &__image {
         width: 50%;
-        background-image: url("../../img/sandwich-about.jpg");
+        background-image: url("./../img/sandwich-about.jpg");
         background-position: center;
     }
 }
