--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 
 @import "abstracts/mixins";
 
+@import "base/animations";
 @import "base/base";
 @import "base/typography";
 @import "base/utilities";
