--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,9 +2,21 @@
     display: flex;
     justify-content: center;
     height: 100vh;
-    background-image: url('./../img/tgiv-header-pic-1.jpg');
+    position: relative;
     background-size: cover;
     background-repeat: no-repeat;
+
+    &__slideshow-img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        object-fit: cover;
+        opacity: 0;
+        transition: opacity 1s ease-in-out;
+    }
     
 
     &__text-box {
