--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -2,6 +2,7 @@
     &,
     &:link,
     &:visited {
+        position: relative;
         display: inline-block;
         width: 17rem;
         padding: 1.5rem 2.5rem 1rem;
