--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,9 +2,13 @@
     display: flex;
     justify-content: center;
     height: 100vh;
-    position: relative;
-    background-size: cover;
-    background-repeat: no-repeat;
+    
+
+    &__header-slideshow {
+        position: relative;
+        height: 100vh;
+        background-color: transparent;
+    }
 
     &__slideshow-img {
         position: absolute;
