--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,7 +1,7 @@
 .navigation {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: relative;
     width: 100vw;
     background-color: var(--color-pink);
 
