--- a/sass/layout/_top-bar.scss
+++ b/sass/layout/_top-bar.scss
@@ -12,8 +12,8 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 30%;
-        font-size: 1.2vw;
+        width: 38rem;
+        font-size: 1.5rem;
         padding: 0 2rem;
         margin-left: 1rem;
         color: var(--color-blue);
@@ -23,7 +23,7 @@
         display: flex;
         padding: 0 2rem;
         justify-content: space-between;
-        width: 8%;
+        width: 10rem;
         margin-right: 6rem;
     }
 
