--- a/css/style.css
+++ b/css/style.css
@@ -36,15 +36,9 @@ $breakpoint arguement choices:
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
-  @media only screen and (max-width: 75em) {
-    html {
-      font-size: 56.25%; } }
-  @media only screen and (max-width: 56.25em) {
-    html {
-      font-size: 50%; } }
   @media only screen and (min-width: 112.5em) {
     html {
-      font-size: 75%; } }
+      font-size: 110%; } }
 
 body {
   background-color: var(--color-pink); }
@@ -58,11 +52,17 @@ body {
   font-weight: 700;
   font-size: 10rem;
   color: #fff; }
+  @media only screen and (max-width: 51.25em) {
+    .heading-primary {
+      font-size: 6rem; } }
 
 .heading-secondary {
   font-size: 3rem;
   color: #fff;
   font-weight: 700; }
+  @media only screen and (max-width: 51.25em) {
+    .heading-secondary {
+      font-size: 2rem; } }
 
 .heading-main {
   font-size: 7rem;
@@ -73,7 +73,11 @@ body {
   .heading-main--white {
     color: #fff; }
   .heading-main--brown {
-    color: var(--color-brown); }
+    color: var(--color-brown);
+    margin-top: 10rem; }
+    @media only screen and (max-width: 51.25em) {
+      .heading-main--brown {
+        margin-top: 6rem; } }
 
 .heading-main-secondary {
   font-size: 3.5rem;
@@ -298,8 +302,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 30%;
-    font-size: 1.2vw;
+    width: 38rem;
+    font-size: 1.5rem;
     padding: 0 2rem;
     margin-left: 1rem;
     color: var(--color-blue); }
@@ -307,7 +311,7 @@ body {
     display: flex;
     padding: 0 2rem;
     justify-content: space-between;
-    width: 8%;
+    width: 10rem;
     margin-right: 6rem; }
   .top-bar__icon {
     fill: var(--color-blue);
@@ -324,6 +328,10 @@ body {
 .section-about {
   display: flex;
   height: 75vh; }
+  @media only screen and (max-width: 51.25em) {
+    .section-about {
+      flex-direction: column;
+      height: 120vh; } }
   .section-about__text-box {
     display: flex;
     flex-direction: column;
@@ -332,10 +340,19 @@ body {
     padding: 10%;
     width: 50%;
     background-color: var(--color-blue); }
+    @media only screen and (max-width: 51.25em) {
+      .section-about__text-box {
+        width: 100%; } }
   .section-about__image {
     width: 50%;
+    height: 100%;
     background-image: url("./../img/sandwich-about.jpg");
-    background-position: center; }
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; }
+    @media only screen and (max-width: 51.25em) {
+      .section-about__image {
+        width: 100%; } }
 
 .section-menu {
   text-align: center;
@@ -399,14 +416,27 @@ body {
 .section-hours-location {
   height: 100vh;
   display: flex; }
+  @media only screen and (max-width: 51.25em) {
+    .section-hours-location {
+      height: 140vh;
+      flex-direction: column-reverse; } }
   .section-hours-location__gmap {
+    display: flex;
     width: 50%;
     height: 100%; }
+    @media only screen and (max-width: 51.25em) {
+      .section-hours-location__gmap {
+        width: 100%;
+        height: 70%; } }
   .section-hours-location__text-box {
     width: 50%;
     height: 100%;
     background-color: var(--color-pink);
     text-align: center; }
+    @media only screen and (max-width: 51.25em) {
+      .section-hours-location__text-box {
+        width: 100%;
+        height: 90%; } }
   .section-hours-location__hours {
     font-weight: 500;
     display: flex;
