--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -22,8 +22,8 @@ $breakpoint arguement choices:
 
 @mixin respond($breakpoint) {
 
-    @if $breakpoint == phone {
-        @media only screen and (max-width: 37.5em) { @content }; //600px
+    @if $breakpoint == tab-port-small {
+        @media only screen and (max-width: 43.75em) { @content }; //700px
     }
 
     @if $breakpoint == tab-port {
