--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -22,6 +22,10 @@ $breakpoint arguement choices:
 
 @mixin respond($breakpoint) {
 
+    @if $breakpoint == phone {
+        @media only screen and (max-width: 33.125em) { @content }; //530px
+    }
+
     @if $breakpoint == tab-port-small {
         @media only screen and (max-width: 43.75em) { @content }; //700px
     }
