--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -48,6 +48,7 @@
     text-align: center;
     display: flex;
     flex-direction: column;
+    background-color: #fff;
 
     &__container {
         display: flex;
@@ -86,7 +87,7 @@
     }
 
     &__item {
-        line-height: 4vh;
+        line-height: 3rem;
     }
 
     &__title {
@@ -105,7 +106,7 @@
         }
 
         @include respond(tab-port-small) {
-            padding: 2rem;
+            padding: 0 2rem 0 2rem;
         }
     }
 
@@ -128,17 +129,22 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+
+        @include respond(tab-port-small) {
+            flex-direction: column;
+        }
     }
 }
 
 .section-pick-up-info {
     width: 100vw;
-    height: 15vh;
+    height: 12rem;
     background-color: var(--color-blue);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 2rem;
 
     &__link,
         &:link,
