--- a/sass/layout/_top-bar.scss
+++ b/sass/layout/_top-bar.scss
@@ -17,6 +17,10 @@
         padding: 0 2rem;
         margin-left: 1rem;
         color: var(--color-blue);
+
+        @include respond(phone) {
+            display: none;
+        }
     }
 
     &__icon-box {
